feature: category template api integrated.

--- a/FynzoSurvey/Storyboard/SideMenu.storyboard
+++ b/FynzoSurvey/Storyboard/SideMenu.storyboard
@@ -25,7 +25,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iya-1V-bwG">
-                                <rect key="frame" x="0.0" y="180" width="414" height="682"/>
+                                <rect key="frame" x="0.0" y="180" width="414" height="716"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="25" minY="0.0" maxX="25" maxY="0.0"/>
@@ -108,7 +108,7 @@
                             <constraint firstItem="iya-1V-bwG" firstAttribute="trailing" secondItem="ck7-sn-nMU" secondAttribute="trailing" id="8hw-zj-7RI"/>
                             <constraint firstItem="iya-1V-bwG" firstAttribute="leading" secondItem="ck7-sn-nMU" secondAttribute="leading" id="ZUD-E5-O7M"/>
                             <constraint firstItem="iya-1V-bwG" firstAttribute="top" secondItem="5NE-Lu-3ca" secondAttribute="bottom" id="gQK-yI-pDx"/>
-                            <constraint firstItem="ck7-sn-nMU" firstAttribute="bottom" secondItem="iya-1V-bwG" secondAttribute="bottom" id="lz4-A1-9xG"/>
+                            <constraint firstAttribute="bottom" secondItem="iya-1V-bwG" secondAttribute="bottom" id="ii8-XM-Yz6"/>
                             <constraint firstItem="5NE-Lu-3ca" firstAttribute="trailing" secondItem="ck7-sn-nMU" secondAttribute="trailing" id="nje-5r-QPB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ck7-sn-nMU"/>
@@ -122,7 +122,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y5v-Vv-wec" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="76" y="169.56521739130437"/>
+            <point key="canvasLocation" x="75.362318840579718" y="169.41964285714286"/>
         </scene>
         <!--Setting View Controller-->
         <scene sceneID="Cob-hu-eSz">
