--- a/FynzoSurvey/Storyboard/Home.storyboard
+++ b/FynzoSurvey/Storyboard/Home.storyboard
@@ -19,9 +19,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dAO-M4-IO9">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dAO-M4-IO9">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <color key="backgroundColor" name="textfieldBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="V0q-GS-JIV" id="Ev5-lz-9Yd"/>
                                     <outlet property="delegate" destination="V0q-GS-JIV" id="elO-XN-5HS"/>
@@ -30,7 +30,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Gxr-YA-OJQ" firstAttribute="bottom" secondItem="dAO-M4-IO9" secondAttribute="bottom" id="5qp-jn-UVL"/>
+                            <constraint firstAttribute="bottom" secondItem="dAO-M4-IO9" secondAttribute="bottom" id="G10-qa-5oJ"/>
                             <constraint firstItem="Gxr-YA-OJQ" firstAttribute="trailing" secondItem="dAO-M4-IO9" secondAttribute="trailing" id="K28-p1-Fwh"/>
                             <constraint firstItem="dAO-M4-IO9" firstAttribute="leading" secondItem="Gxr-YA-OJQ" secondAttribute="leading" id="Zdl-RD-zhs"/>
                             <constraint firstItem="dAO-M4-IO9" firstAttribute="top" secondItem="Gxr-YA-OJQ" secondAttribute="top" id="sbj-Kk-qrg"/>
@@ -43,7 +43,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="otV-Gb-ewT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="115"/>
+            <point key="canvasLocation" x="73.913043478260875" y="114.50892857142857"/>
         </scene>
         <!--Form View Controller-->
         <scene sceneID="tI4-ht-CSc">
@@ -54,7 +54,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="form_background" translatesAutoresizingMaskIntoConstraints="NO" id="Afg-r1-Llu">
-                                <rect key="frame" x="0.0" y="34" width="414" height="828"/>
+                                <rect key="frame" x="0.0" y="34" width="414" height="862"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nog-bE-7P1">
                                 <rect key="frame" x="0.0" y="44" width="414" height="60"/>
@@ -113,7 +113,7 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zyE-JS-g2v">
-                                <rect key="frame" x="0.0" y="114" width="414" height="748"/>
+                                <rect key="frame" x="0.0" y="114" width="414" height="782"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Xzw-mp-SYi">
                                     <size key="itemSize" width="50" height="50"/>
@@ -140,15 +140,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="zyE-JS-g2v" firstAttribute="top" secondItem="nog-bE-7P1" secondAttribute="bottom" constant="10" id="2Pg-ht-v9z"/>
+                            <constraint firstAttribute="bottom" secondItem="Afg-r1-Llu" secondAttribute="bottom" id="7X2-bu-PMr"/>
                             <constraint firstItem="Afg-r1-Llu" firstAttribute="leading" secondItem="sQG-93-ZNl" secondAttribute="leading" id="Bb8-va-F6R"/>
-                            <constraint firstItem="sQG-93-ZNl" firstAttribute="bottom" secondItem="zyE-JS-g2v" secondAttribute="bottom" id="E9w-wI-nxe"/>
                             <constraint firstItem="Afg-r1-Llu" firstAttribute="top" secondItem="nog-bE-7P1" secondAttribute="bottom" constant="-70" id="Lkq-v8-Ul5"/>
                             <constraint firstItem="zyE-JS-g2v" firstAttribute="leading" secondItem="sQG-93-ZNl" secondAttribute="leading" id="Q3q-j6-uoO"/>
                             <constraint firstItem="sQG-93-ZNl" firstAttribute="trailing" secondItem="zyE-JS-g2v" secondAttribute="trailing" id="XaO-Bs-9Nn"/>
                             <constraint firstItem="nog-bE-7P1" firstAttribute="top" secondItem="sQG-93-ZNl" secondAttribute="top" id="ZXy-0f-oam"/>
                             <constraint firstItem="nog-bE-7P1" firstAttribute="leading" secondItem="sQG-93-ZNl" secondAttribute="leading" id="Zdq-xy-OBC"/>
                             <constraint firstItem="sQG-93-ZNl" firstAttribute="trailing" secondItem="Afg-r1-Llu" secondAttribute="trailing" id="dar-lp-3fW"/>
-                            <constraint firstItem="sQG-93-ZNl" firstAttribute="bottom" secondItem="Afg-r1-Llu" secondAttribute="bottom" id="lyv-L6-AcM"/>
+                            <constraint firstAttribute="bottom" secondItem="zyE-JS-g2v" secondAttribute="bottom" id="eUf-3R-lbd"/>
                             <constraint firstItem="sQG-93-ZNl" firstAttribute="trailing" secondItem="nog-bE-7P1" secondAttribute="trailing" id="ydq-T1-VLS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sQG-93-ZNl"/>
@@ -456,7 +456,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="amo-OX-Bmr">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="Ln4-n1-d5Y" id="S3A-Z6-9cI"/>
@@ -468,8 +468,8 @@
                         <constraints>
                             <constraint firstItem="amo-OX-Bmr" firstAttribute="top" secondItem="HVx-iD-rQb" secondAttribute="top" id="7LI-D8-1ht"/>
                             <constraint firstItem="amo-OX-Bmr" firstAttribute="leading" secondItem="HVx-iD-rQb" secondAttribute="leading" id="BYB-UA-QDU"/>
-                            <constraint firstItem="HVx-iD-rQb" firstAttribute="bottom" secondItem="amo-OX-Bmr" secondAttribute="bottom" id="Cut-we-mmv"/>
                             <constraint firstItem="HVx-iD-rQb" firstAttribute="trailing" secondItem="amo-OX-Bmr" secondAttribute="trailing" id="adj-b4-Mv4"/>
+                            <constraint firstAttribute="bottom" secondItem="amo-OX-Bmr" secondAttribute="bottom" id="qYR-go-1bi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="HVx-iD-rQb"/>
                     </view>
@@ -479,7 +479,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i1a-Dn-EnS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3278" y="125"/>
+            <point key="canvasLocation" x="3276.811594202899" y="124.55357142857142"/>
         </scene>
         <!--Response Detail View Controller-->
         <scene sceneID="r32-Ub-ydu">
@@ -490,7 +490,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PvG-b1-vLn">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="h8q-r5-8ue" id="kre-l7-V9B"/>
@@ -500,10 +500,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="PvG-b1-vLn" secondAttribute="bottom" id="1Ym-Yk-10S"/>
                             <constraint firstItem="PvG-b1-vLn" firstAttribute="top" secondItem="Fxu-Hc-XUC" secondAttribute="top" id="RVO-LD-ODQ"/>
                             <constraint firstItem="PvG-b1-vLn" firstAttribute="leading" secondItem="Fxu-Hc-XUC" secondAttribute="leading" id="hub-n2-wd5"/>
                             <constraint firstItem="Fxu-Hc-XUC" firstAttribute="trailing" secondItem="PvG-b1-vLn" secondAttribute="trailing" id="pAE-1l-gwp"/>
-                            <constraint firstItem="Fxu-Hc-XUC" firstAttribute="bottom" secondItem="PvG-b1-vLn" secondAttribute="bottom" id="uJ2-Rf-EoK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Fxu-Hc-XUC"/>
                     </view>
@@ -513,7 +513,75 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NXe-gV-ds1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4054" y="132"/>
+            <point key="canvasLocation" x="4053.6231884057975" y="131.91964285714286"/>
+        </scene>
+        <!--Import Template Survey View Controller-->
+        <scene sceneID="5mm-gu-erc">
+            <objects>
+                <viewController storyboardIdentifier="ImportTemplateSurveyViewController" id="lTO-JL-K5P" customClass="ImportTemplateSurveyViewController" customModule="FynzoSurvey" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tPj-Le-sPw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9jP-XE-N6U">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="lTO-JL-K5P" id="9Xl-Ai-6eF"/>
+                                    <outlet property="delegate" destination="lTO-JL-K5P" id="SMt-vU-v6K"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="pUa-xA-Fgr" firstAttribute="trailing" secondItem="9jP-XE-N6U" secondAttribute="trailing" id="Jqy-BY-REH"/>
+                            <constraint firstItem="9jP-XE-N6U" firstAttribute="leading" secondItem="pUa-xA-Fgr" secondAttribute="leading" id="LiP-0J-Epp"/>
+                            <constraint firstItem="9jP-XE-N6U" firstAttribute="top" secondItem="pUa-xA-Fgr" secondAttribute="top" id="UrK-nJ-gDF"/>
+                            <constraint firstAttribute="bottom" secondItem="9jP-XE-N6U" secondAttribute="bottom" id="qHr-Xv-GG3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="pUa-xA-Fgr"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="9jP-XE-N6U" id="pdH-0u-ZCp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UaX-W2-Hzt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4822" y="121"/>
+        </scene>
+        <!--Templates View Controller-->
+        <scene sceneID="IQg-q1-3bs">
+            <objects>
+                <viewController storyboardIdentifier="TemplatesViewController" id="CfG-Ha-HzG" customClass="TemplatesViewController" customModule="FynzoSurvey" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WJt-rP-ctF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Jbr-Fx-hKh">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" name="textfieldBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="CfG-Ha-HzG" id="7wj-wv-eo1"/>
+                                    <outlet property="delegate" destination="CfG-Ha-HzG" id="xxk-PG-Of1"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6bX-CN-kgc" firstAttribute="trailing" secondItem="Jbr-Fx-hKh" secondAttribute="trailing" id="4Je-A3-gT5"/>
+                            <constraint firstAttribute="bottom" secondItem="Jbr-Fx-hKh" secondAttribute="bottom" id="53S-ou-hwi"/>
+                            <constraint firstItem="Jbr-Fx-hKh" firstAttribute="leading" secondItem="6bX-CN-kgc" secondAttribute="leading" id="8QC-yd-VwD"/>
+                            <constraint firstItem="Jbr-Fx-hKh" firstAttribute="top" secondItem="WJt-rP-ctF" secondAttribute="top" id="Cxo-Sv-hIv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6bX-CN-kgc"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Jbr-Fx-hKh" id="QUm-Go-1T6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fQ1-Gu-tyF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5534.7826086956529" y="124.55357142857142"/>
         </scene>
     </scenes>
     <resources>
@@ -524,6 +592,9 @@
         </namedColor>
         <namedColor name="textColor">
             <color red="0.35686274509803922" green="0.35294117647058826" blue="0.35294117647058826" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="textfieldBackgroundColor">
+            <color red="0.93725490196078431" green="0.94509803921568625" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
