--- a/FynzoSurvey/ViewControllers/Home/HomeTableViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Home/HomeTableViewCell.xib
@@ -21,16 +21,16 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QYg-yI-2g7">
-                        <rect key="frame" x="5" y="5" width="310" height="70.5"/>
+                        <rect key="frame" x="10" y="5" width="300" height="70.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ok-fE-8R8">
-                                <rect key="frame" x="15" y="15" width="192" height="40.5"/>
+                                <rect key="frame" x="15" y="15" width="182" height="40.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" name="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="czX-eu-pOn">
-                                <rect key="frame" x="222" y="20.5" width="80" height="30"/>
+                                <rect key="frame" x="212" y="20.5" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="8lx-ZP-XXe"/>
                                     <constraint firstAttribute="height" constant="30" id="y5d-db-oli"/>
@@ -67,11 +67,12 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
+                <color key="backgroundColor" name="textfieldBackgroundColor"/>
                 <constraints>
-                    <constraint firstItem="QYg-yI-2g7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="IwE-iG-Ksd"/>
+                    <constraint firstItem="QYg-yI-2g7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="IwE-iG-Ksd"/>
                     <constraint firstItem="QYg-yI-2g7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Lb2-ok-vtX"/>
                     <constraint firstAttribute="bottom" secondItem="QYg-yI-2g7" secondAttribute="bottom" constant="5" id="NeP-cI-wX3"/>
-                    <constraint firstAttribute="trailing" secondItem="QYg-yI-2g7" secondAttribute="trailing" constant="5" id="shq-Vt-drX"/>
+                    <constraint firstAttribute="trailing" secondItem="QYg-yI-2g7" secondAttribute="trailing" constant="10" id="shq-Vt-drX"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -88,6 +89,9 @@
         </namedColor>
         <namedColor name="textColor">
             <color red="0.35686274509803922" green="0.35294117647058826" blue="0.35294117647058826" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="textfieldBackgroundColor">
+            <color red="0.93725490196078431" green="0.94509803921568625" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
