--- a/FynzoSurvey/Storyboard/LaunchScreen.storyboard
+++ b/FynzoSurvey/Storyboard/LaunchScreen.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,10 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_login_background" translatesAutoresizingMaskIntoConstraints="NO" id="VR1-yi-QeB">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="bZD-Jh-nnD">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="white_logo_with_name" translatesAutoresizingMaskIntoConstraints="NO" id="bZD-Jh-nnD">
                                 <rect key="frame" x="112.5" y="248.5" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="Ulp-uo-WDO">
@@ -33,14 +31,10 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="appThemeColor"/>
                         <constraints>
                             <constraint firstItem="bZD-Jh-nnD" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-10" id="0pY-5C-j77"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VR1-yi-QeB" secondAttribute="trailing" id="0qv-wS-GjE"/>
                             <constraint firstItem="bZD-Jh-nnD" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="D8p-Y8-8dN"/>
-                            <constraint firstItem="VR1-yi-QeB" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="M65-6e-B5Q"/>
-                            <constraint firstItem="VR1-yi-QeB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Wrb-mL-n7j"/>
-                            <constraint firstAttribute="bottom" secondItem="VR1-yi-QeB" secondAttribute="bottom" id="vzg-IV-Tlx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -51,7 +45,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ic_login_background" width="540" height="960.47998046875"/>
-        <image name="logo" width="1024" height="1024"/>
+        <image name="white_logo_with_name" width="500" height="500"/>
+        <namedColor name="appThemeColor">
+            <color red="0.086274509803921567" green="0.39215686274509803" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
