--- a/FynzoSurvey/Storyboard/SideMenu.storyboard
+++ b/FynzoSurvey/Storyboard/SideMenu.storyboard
@@ -37,7 +37,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5NE-Lu-3ca">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="180"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_profile" translatesAutoresizingMaskIntoConstraints="NO" id="dw0-PS-IJf" customClass="ORDesignableImageView" customModule="FynzoSurvey" customModuleProvider="target">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_profile" translatesAutoresizingMaskIntoConstraints="NO" id="dw0-PS-IJf" customClass="ORDesignableImageView" customModule="FynzoSurvey" customModuleProvider="target">
                                         <rect key="frame" x="15" y="45" width="90" height="90"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -248,9 +248,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ic_profile" width="20" height="20"/>
+        <image name="ic_profile" width="64" height="56"/>
         <namedColor name="appThemeColor">
-            <color red="0.0" green="0.5607843137254902" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.27058823529411763" green="0.59999999999999998" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
